<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignUp"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon"
            android:transitionName="transition_back_btn"/>


        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/brandon_blk"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rather_not_say" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_age"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:onClick="callNextSignupScreen"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:transitionName="transition_next_btn"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00000000"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/brandon_reg"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>
    </LinearLayout>

</ScrollView>