<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.StartupScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/covid_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/brandon_blk"
            android:text="@string/login_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/brandon_bld"
            android:text="@string/login_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">


            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/brandon_blk"
                android:onClick="callLoginScreen"
                android:text="@string/login"
                android:textColor="@color/white"
                android:transitionName="transition_login"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/brandon_blk"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:fontFamily="@font/brandon_blk"
            android:text="@string/how_does_it_work"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</ScrollView>