<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Common.LoginSignup.VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_close_icon"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/brandon_blk"
            android:includeFontPadding="false"
            android:text="@string/otp_code_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="80sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/brandon_blk"
            android:includeFontPadding="false"
            android:text="@string/otp_verification_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/brandon_med"
            android:includeFontPadding="false"
            android:text="@string/otp_description_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <com.chaos.view.PinView
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/lightwhite"
            app:cursorColor="@color/colorPrimary"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineColor="@color/gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/brandon_blk"
            android:text="@string/verift_code"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>