<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignUp"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon"
            android:transitionName="transition_back_btn"/>


        <TextView
            android:id="@+id/transition_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/brandon_blk"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:startIconDrawable="@drawable/full_name_field_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                app:startIconDrawable="@drawable/username_field_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/email_field_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                app:startIconDrawable="@drawable/phone_number_field_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/password_field_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>

        <Button
            android:id="@+id/transition_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/transition_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00000000"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/brandon_reg"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>
    </LinearLayout>

</ScrollView>