<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".Common.LoginSignup.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/brandon_blk"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:padding="8dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_hintExampleNumberType="MOBILE"
                app:ccp_showFullName="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone_number"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_country_code_picker"
                android:hint="@string/enter_phone_number"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/phone_number_field_icon"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/brandon_reg"
                    android:inputType="phone">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_number"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/password_field_icon"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/brandon_reg"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/remember_me_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/remember_me"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/brandon_med"
                    android:text="@string/remember_me"
                    android:textColor="@color/black" />


<!--                <Button-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:background="#00000000"-->
<!--                    android:fontFamily="@font/brandon_med"-->
<!--                    android:text="@string/forget_password" />-->

            </RelativeLayout>

            <Button
                android:id="@+id/letTheUserLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/remember_me_block"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/brandon_blk"
                android:onClick="letTheUserLogin"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/signup_btn"
                android:onClick="callSignUpScreen"
                android:transitionName="transition_sigun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/letTheUserLogIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:fontFamily="@font/brandon_med"
                android:text="@string/create_account" />


            <RelativeLayout
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/white_circle"
                android:padding="20dp"
                android:visibility="invisible">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:elevation="8dp" />

            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>

</ScrollView>