<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_3rd_screen_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="transition_OTP_screen"
    tools:context=".Common.LoginSignup.SignUp3rdClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="call2ndSignupScreen"
            android:padding="5dp"
            android:src="@drawable/back_arrow_icon"
            android:transitionName="transition_back_btn"
            app:tint="@color/black" />


        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/brandon_blk"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:transitionName="transition_title_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/brandon_blk"
                android:text="@string/enter_phone_number"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:padding="8dp"
                app:ccp_defaultNameCode="NL"
                app:ccp_hintExampleNumberType="MOBILE"
                app:ccp_showFullName="true"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/phone_icon"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/brandon_reg"
                    android:textColor="@color/black"
                    android:inputType="phone">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/signup_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="5dp"
                android:fontFamily="@font/brandon_blk"
                android:onClick="callVerifyOTPScreen"
                android:text="@string/next_btn"
                android:textColor="@color/white"
                android:transitionName="transition_next_btn"
                tools:ignore="TextContrastCheck" />

<!--            <Button-->
<!--                android:id="@+id/signup_login_btn"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:background="#00000000"-->
<!--                android:elevation="5dp"-->
<!--                android:fontFamily="@font/brandon_med"-->
<!--                android:onClick="callLoginScreen"-->
<!--                android:text="@string/login"-->
<!--                android:textColor="@color/black"-->
<!--                android:transitionName="transition_login_btn" />-->
        </LinearLayout>
    </LinearLayout>

</ScrollView>